matrix-dot-org/synapse/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-svc
  namespace: matrix-dot-org
spec:
  ports:
    - port: 8008
      targetPort: 8008
  selector:
    app: synapse
