matrix-dot-org/synapse/04-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-ing
  namespace: matrix-dot-org
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`matrix.k8s.test`)
      services:
        - kind: Service
          name: synapse-svc
          port: 8080
